--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,5 @@
 
-<button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
+<button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded m-1">
     Button
   </button>
 
