Styling navbar,  menu z fixed, add hompage cards

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<app-header></app-header>
+<!-- <app-header></app-header> -->
 <app-navbar></app-navbar> 
 <app-carousel></app-carousel>
 <router-outlet></router-outlet>
-<app-footer></app-footer>
-<app-cookie-popup></app-cookie-popup>
+<!-- <app-footer></app-footer>
+<app-cookie-popup></app-cookie-popup> -->
