--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,134 @@
-<div>home works!</div>
-   
+<section class="bg-black pt-10 px-4 pb-10 lg:pt-[120px] lg:pb-20">
+  <div class="container mx-auto">
+    <div>
+      <h1 class="text-orange">LOREM IPSUM</h1>
+      <p class="text-white pb-10">Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+        when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+        It has survived not only five centuries, but also the leap into electronic typesetting, remaining 
+        essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing 
+        Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including 
+        versions of Lorem Ipsum.</p>
+    </div>
+     <div class="flex flex-wrap -mx-4">
+        <div class="w-full px-4 md:w-1/2 xl:w-1/3">
+           <div
+              class="mb-10 overflow-hidden duration-300 bg-brown rounded-lg shadow-1"
+              >
+              <img
+                 src="https://images.pexels.com/photos/2117937/pexels-photo-2117937.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                 alt="image"
+                 class="w-full roim"
+                 />
+              <div class="p-8 text-center sm:p-9 md:p-7 xl:p-9">
+                 <h3>
+                    <a
+                       href="javascript:void(0)"
+                       class="text-dark dark:text-white hover:text-primary mb-4 block text-xl font-semibold sm:text-[22px] md:text-xl lg:text-[22px] xl:text-xl 2xl:text-[22px]"
+                       >
+                    50+ Best creative website themes & templates
+                    </a>
+                 </h3>
+                 <p
+                    class="text-base leading-relaxed text-body-color dark:text-dark-6 mb-7"
+                    >
+                    Lorem ipsum dolor sit amet pretium consectetur adipiscing
+                    elit. Lorem consectetur adipiscing elit.
+                 </p>
+                 <a
+                    href="javascript:void(0)"
+                    class="inline-block py-2 text-base font-medium transition border rounded-full px-7 hover:text-orange"
+                    >
+                 View Details
+                 </a>
+              </div>
+           </div>
+        </div>
+        <div class="w-full px-4 md:w-1/2 xl:w-1/3">
+           <div
+              class="mb-10 overflow-hidden duration-300 bg-brown  rounded-lg dark:bg-dark-2 shadow-1 hover:shadow-3 dark:shadow-card dark:hover:shadow-3"
+              >
+              <img
+                 src="https://images.pexels.com/photos/304664/pexels-photo-304664.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                 alt="image"
+                 class="w-full"
+                 />
+              <div class="p-8 text-center sm:p-9 md:p-7 xl:p-9">
+                 <h3>
+                    <a
+                       href="javascript:void(0)"
+                       class="text-dark dark:text-white hover:text-primary mb-4 block text-xl font-semibold sm:text-[22px] md:text-xl lg:text-[22px] xl:text-xl 2xl:text-[22px]"
+                       >
+                    The ultimate UX and UI guide to card design
+                    </a>
+                 </h3>
+                 <p class="text-base leading-relaxed text-body-color mb-7">
+                    Lorem ipsum dolor sit amet pretium consectetur adipiscing
+                    elit. Lorem consectetur adipiscing elit.
+                 </p>
+                 <a
+                    href="javascript:void(0)"
+                    class="inline-block py-2 text-base font-medium transition border rounded-full text-body-color hover:border-primary hover:bg-primary border-gray-3 px-7 hover:text-orange  dark:border-dark-3 dark:text-dark-6"
+                    >
+                 View Details
+                 </a>
+              </div>
+           </div>
+        </div>
+        <div class="w-full px-4 md:w-1/2 xl:w-1/3">
+           <div
+              class="mb-10 overflow-hidden duration-300 bg-brown rounded-lg dark:bg-dark-2 shadow-1 hover:shadow-3 dark:shadow-card dark:hover:shadow-3"
+              >
+              <img
+                 src="https://images.pexels.com/photos/2004166/pexels-photo-2004166.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                 alt="image"
+                 class="w-full"
+                 />
+              <div class="p-8 text-center sm:p-9 md:p-7 xl:p-9">
+                 <h3>
+                    <a
+                       href="javascript:void(0)"
+                       class="text-dark hover:text-primary mb-4 block text-xl font-semibold sm:text-[22px] md:text-xl lg:text-[22px] xl:text-xl 2xl:text-[22px]"
+                       >
+                    Creative Card Component designs graphic elements
+                    </a>
+                 </h3>
+                 <p class="text-base leading-relaxed text-body-color mb-7">
+                    Lorem ipsum dolor sit amet pretium consectetur adipiscing
+                    elit. Lorem consectetur adipiscing elit.
+                 </p>
+                 <a
+                    href="javascript:void(0)"
+                    class="inline-block py-2 text-base font-medium transition border rounded-full text-body-color hover:border-primary hover:bg-primary border-gray-3 px-7 hover:text-orange  dark:border-dark-3 dark:text-dark-6"
+                    >
+                 View Details
+                 </a>
+              </div>
+           </div>
+        </div>
+     </div>
+  </div>
+</section>
+<section class="bg-whte pt-10 px-4 pb-10 lg:pt-[120px] lg:pb-20 drop-shadow-md">
+    <div class="container mx-auto drop-shadow-sm">
+      <div>
+        <h1 class="text-orange">LOREM IPSUM</h1>
+        <p class=" pb-10">Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+          Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+          when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+          It has survived not only five centuries, but also the leap into electronic typesetting, remaining 
+          essentially unchanged. .</p>
+      </div>
+      </div>
+</section>
 
+<section class="bg-orange pt-3 px-4 pb-3 lg:pt-[30px] lg:pb-4">
+  <div class="container mx-auto ">
+    <div>
+      <h1 class="text-white">LOREM IPSUM</h1>
+      <p class=" pb-10 text-white">Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+    </div>
+    </div>
+</section>
 
