add home components and style navar logo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,5 @@
 <app-navbar></app-navbar> 
 <app-carousel></app-carousel>
 <router-outlet></router-outlet>
-<!-- <app-footer></app-footer>
-<app-cookie-popup></app-cookie-popup> -->
+<app-footer></app-footer>
+<!-- <app-cookie-popup></app-cookie-popup> -->
