--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,9 @@
+
+<section>
+   
+</section>
+
+
 <section class="bg-black pt-10 px-4 pb-10 lg:pt-[120px] lg:pb-20">
   <div class="container mx-auto">
     <div>
@@ -109,15 +115,22 @@
      </div>
   </div>
 </section>
+
 <section class="bg-whte pt-10 px-4 pb-10 lg:pt-[120px] lg:pb-20 drop-shadow-md">
     <div class="container mx-auto drop-shadow-sm">
       <div>
         <h1 class="text-orange">LOREM IPSUM</h1>
-        <p class=" pb-10">Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-          Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-          when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
-          It has survived not only five centuries, but also the leap into electronic typesetting, remaining 
-          essentially unchanged. .</p>
+      <p class=" text-2xl">
+    W 
+    <span class="text-orange mx-1 font-extrabold text-4xl relative inline-block stroke-current">
+        Solid Base
+        <svg class="absolute -bottom-0.5 w-full max-h-1.5" viewBox="0 0 55 5" xmlns="http://www.w3.org/2000/svg"
+            preserveAspectRatio="none">
+            <path d="M0.652466 4.00002C15.8925 2.66668 48.0351 0.400018 54.6853 2.00002" stroke-width="2"></path>
+        </svg>
+    </span>
+    wiemy jak doprowadzić projekt do końca, tak aby każdy klient był zadowolony.
+</p>
       </div>
       </div>
 </section>
@@ -130,5 +143,88 @@
         Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
     </div>
     </div>
+</section>
+
+<section id="works" class="relative bg-brown py-10 sm:py-16 lg:py-24">
+   <div class="px-4 mx-auto max-w-7xl sm:px-6 lg:px-8">
+       <div class="max-w-2xl mx-auto text-center">
+           <h2 class="text-4xl text-white font-extrabold mx-auto md:text-6xl lg:text-5xl">Jak to działa?</h2>
+           <p class="max-w-2xl mx-auto mt-4 text-base text-orange leading-relaxed md:text-2xl">
+               Nasza etyka pracy
+           </p>
+       </div>
+       <div class="relative mt-12 lg:mt-20">
+           <div class="absolute inset-x-0 hidden xl:px-44 top-2 md:block md:px-20 lg:px-28"><img alt="" loading="lazy" width="1000" height="500" decoding="async" data-nimg="1" class="w-full" style="color:transparent" src="https://cdn.rareblocks.xyz/collection/celebration/images/steps/2/curved-dotted-line.svg">
+           </div>
+           <div class="relative grid grid-cols-1 text-center gap-y-12 md:grid-cols-3 gap-x-12">
+               <div>
+                   <div
+                       class="flex items-center justify-center w-16 h-16 mx-auto bg-white border-2 border-gray-200 rounded-full shadow ">
+                       <span class="text-xl font-semibold text-black">1</span>
+                   </div>
+                   <h3 class="mt-6 text-xl  text-white font-semibold leading-tight md:mt-10">Kontaktujesz się z nami</h3>
+                   <p class="mt-4 text-base text-orange md:text-lg">
+                       Skorzystaj z formularza
+                   </p>
+               </div>
+               <div>
+                   <div
+                       class="flex items-center justify-center w-16 h-16 mx-auto bg-white border-2 border-gray-200 rounded-full shadow md:animate-pulse">
+                       <span class="text-xl font-semibold text-black">2</span>
+                   </div>
+                   <h3 class="mt-6 text-xl text-white font-semibold leading-tight md:mt-10">Wysyłasz zapytanie</h3>
+                   <p class="mt-4 text-base text-orange md:text-lg">
+                       Przygotowujemy wycenę
+                   </p>
+               </div>
+               <div>
+                   <div
+                       class="flex items-center justify-center w-16 h-16 mx-auto bg-white border-2 border-gray-200 rounded-full shadow ">
+                       <span class="text-xl font-semibold text-black">3</span>
+                   </div>
+                   <h3 class="mt-6 text-xl text-white font-semibold leading-tight md:mt-10">Przystępujemy do działania</h3>
+                   <p class="mt-4 text-base text-orange md:text-lg">
+                       Realizujemy Twój projekt
+                   </p>
+               </div>
+           </div>
+       </div>
+   </div>
+   <div class="absolute inset-0 m-auto max-w-xs h-[357px] blur-[118px] sm:max-w-md md:max-w-lg"
+       style="background:radial-gradient(1.89deg, rgba(34, 78, 95, 0.4) -1000%, rgba(191, 227, 205, 0.26) 1500.74%, rgba(34, 140, 165, 0.41) 56.49%, rgba(28, 47, 99, 0.11) 1150.91%)">
+   </div>
+</section>
+
+
+<section>
+<div class="bg-black py-24 sm:py-32">
+   <div class="mx-auto max-w-7xl px-6 lg:px-8">
+     <div class="mx-auto max-w-2xl lg:max-w-none">
+       <div class="text-center space-y-4">
+         <h2 class="text-3xl font-bold tracking-tight text-white sm:text-4xl">Nasze statystyki</h2>
+         <p class="text-lg leading-8 text-gray-300">Nasze wyniki mówią same za siebie, przekonaj się.
+         </p>
+       </div>
+       <dl class="mt-16 grid grid-cols-1 gap-0.5 overflow-hidden rounded-2xl text-center sm:grid-cols-2 lg:grid-cols-4">
+         <div class="flex flex-col bg-white/5 p-8">
+           <dt class="text-sm font-semibold leading-6 text-gray-300">Wylanego Betonu</dt>
+           <dd class="order-first text-3xl font-semibold tracking-tight text-white">2000m3</dd>
+         </div>
+         <div class="flex flex-col bg-white/5 p-8">
+           <dt class="text-sm font-semibold leading-6 text-gray-300">Zrealizowanych projektów</dt>
+           <dd class="order-first text-3xl font-semibold tracking-tight text-white">30</dd>
+         </div>
+         <div class="flex flex-col bg-white/5 p-8">
+           <dt class="text-sm font-semibold leading-6 text-gray-300">Lokalizacji</dt>
+           <dd class="order-first text-3xl font-semibold tracking-tight text-white">23</dd>
+         </div>
+         <div class="flex flex-col bg-white/5 p-8">
+           <dt class="text-sm font-semibold leading-6 text-gray-300">Powierzchni</dt>
+           <dd class="order-first text-3xl font-semibold tracking-tight text-white">6000m2</dd>
+         </div>
+       </dl>
+     </div>
+   </div>
+ </div>
 </section>
 
