--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,1 +1,19 @@
-<p>footer works!</p>
+
+<footer class="bg-black rounded-lg shadow m-4 dark:bg-gray-800">
+    <div class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between">
+      <span class="text-sm text-white sm:text-center">© 2024 Solid Base™. All Rights Reserved.
+    </span>
+    <ul class="flex flex-wrap items-center mt-3 text-sm font-medium text-white  sm:mt-0">
+        <li>
+            <a href="#" class="hover:underline me-4 md:me-6">Oferta</a>
+        </li>
+        <li>
+            <a href="#" class="hover:underline me-4 md:me-6">Polityka Prywatności</a>
+        </li>
+       
+        <li>
+            <a href="#" class="hover:underline">Contact</a>
+        </li>
+    </ul>
+    </div>
+</footer>
