--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -2,7 +2,13 @@
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
       <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
           <!-- <img src="assets/logoSB.png" style="height: 85px" alt="Logo" /> -->
-          <span class="text-orange self-center text-3xl font-semibold whitespace-nowrap">SOLID BASE</span>
+          <span class="text-orange self-center text-3xl font-semibold whitespace-nowrap">  <span class="text-orange mx-1 font-extrabold text-4xl relative inline-block stroke-current">
+            Solid Base
+            <svg class="absolute -bottom-0.5 w-full max-h-1.5" viewBox="0 0 55 5" xmlns="http://www.w3.org/2000/svg"
+                preserveAspectRatio="none">
+                <path d="M0.652466 4.00002C15.8925 2.66668 48.0351 0.400018 54.6853 2.00002" stroke-width="2"></path>
+            </svg>
+        </span></span>
       </a>
       <button data-collapse-toggle="navbar-dropdown" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 " aria-controls="navbar-dropdown" aria-expanded="false">
           <span class="sr-only">Open main menu</span>
@@ -20,20 +26,20 @@
       <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"/>
     </svg></button>
               <!-- Dropdown menu -->
-              <div id="dropdownNavbar" class="z-40 hidden font-normal bg-white divide-y divide-gray-500 rounded-lg shadow-md shadow-gray-300">
-                  <ul class="py-2 text-sm text-orange " aria-labelledby="dropdownLargeButton">
-                    <li>
-                      <a href="#" class="flex md:block px-4 py-2">Tanio</a>
-                    </li>
-                    <li>
-                      <a href="#" class="flex md:block px-4 py-2">Taniej</a>
-                    </li>
-                    <li>
-                      <a href="#" class="flex md:block px-4 py-2">Najtaniej</a>
-                    </li>
-                  </ul>
-      
-              </div>
+<div id="dropdownNavbar" class="z-40 hidden font-normal bg-white divide-y divide-black rounded-lg shadow-md shadow-black sm:ml-auto">
+    <ul class="py-2 text-sm text-orange" aria-labelledby="dropdownLargeButton">
+        <li>
+            <a href="#" class="flex md:block px-4 py-2">Tanio</a>
+        </li>
+        <li>
+            <a href="#" class="flex md:block px-4 py-2">Taniej</a>
+        </li>
+        <li>
+            <a href="#" class="flex md:block px-4 py-2">Najtaniej</a>
+        </li>
+    </ul>
+</div>
+
           </li>
           <li>
             <a href="#" class="block py-2 px-3 text-orange rounded md:hover:text-white md:border-0 md:p-0 ">Realizacje</a>
