--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -202,24 +202,24 @@
      <div class="mx-auto max-w-2xl lg:max-w-none">
        <div class="text-center space-y-4">
          <h2 class="text-3xl font-bold tracking-tight text-white sm:text-4xl">Nasze statystyki</h2>
-         <p class="text-lg leading-8 text-gray-300">Nasze wyniki mówią same za siebie, przekonaj się.
+         <p class="text-lg leading-8 text-grey">Nasze wyniki mówią same za siebie, przekonaj się.
          </p>
        </div>
        <dl class="mt-16 grid grid-cols-1 gap-0.5 overflow-hidden rounded-2xl text-center sm:grid-cols-2 lg:grid-cols-4">
          <div class="flex flex-col bg-white/5 p-8">
-           <dt class="text-sm font-semibold leading-6 text-gray-300">Wylanego Betonu</dt>
+           <dt class="text-sm font-semibold leading-6 text-grey">Wylanego Betonu</dt>
            <dd class="order-first text-3xl font-semibold tracking-tight text-white">2000m3</dd>
          </div>
          <div class="flex flex-col bg-white/5 p-8">
-           <dt class="text-sm font-semibold leading-6 text-gray-300">Zrealizowanych projektów</dt>
+           <dt class="text-sm font-semibold leading-6 text-grey">Zrealizowanych projektów</dt>
            <dd class="order-first text-3xl font-semibold tracking-tight text-white">30</dd>
          </div>
          <div class="flex flex-col bg-white/5 p-8">
-           <dt class="text-sm font-semibold leading-6 text-gray-300">Lokalizacji</dt>
+           <dt class="text-sm font-semibold leading-6 text-grey">Lokalizacji</dt>
            <dd class="order-first text-3xl font-semibold tracking-tight text-white">23</dd>
          </div>
          <div class="flex flex-col bg-white/5 p-8">
-           <dt class="text-sm font-semibold leading-6 text-gray-300">Powierzchni</dt>
+           <dt class="text-sm font-semibold leading-6 text-grey">Powierzchni</dt>
            <dd class="order-first text-3xl font-semibold tracking-tight text-white">6000m2</dd>
          </div>
        </dl>
