--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -19,7 +19,7 @@
      <div class="flex flex-wrap -mx-4">
         <div class="w-full px-4 md:w-1/2 xl:w-1/3">
            <div
-              class="mb-10 overflow-hidden duration-300 bg-brown rounded-lg shadow-1"
+              class="mb-10 overflow-hidden duration-300 bg-brown rounded-lg shadow-2xl shadow-gray-800"
               >
               <img
                  src="https://images.pexels.com/photos/2117937/pexels-photo-2117937.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
@@ -52,7 +52,7 @@
         </div>
         <div class="w-full px-4 md:w-1/2 xl:w-1/3">
            <div
-              class="mb-10 overflow-hidden duration-300 bg-brown  rounded-lg dark:bg-dark-2 shadow-1 hover:shadow-3 dark:shadow-card dark:hover:shadow-3"
+              class="mb-10 overflow-hidden duration-300 bg-brown  rounded-lg dark:bg-dark-2 shadow-2xl shadow-gray-800 hover:shadow-3 dark:shadow-card dark:hover:shadow-3"
               >
               <img
                  src="https://images.pexels.com/photos/304664/pexels-photo-304664.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
@@ -83,7 +83,7 @@
         </div>
         <div class="w-full px-4 md:w-1/2 xl:w-1/3">
            <div
-              class="mb-10 overflow-hidden duration-300 bg-brown rounded-lg dark:bg-dark-2 shadow-1 hover:shadow-3 dark:shadow-card dark:hover:shadow-3"
+              class="mb-10 overflow-hidden duration-300 bg-brown rounded-lg dark:bg-dark-2 shadow-2xl shadow-gray-800 hover:shadow-3 dark:shadow-card dark:hover:shadow-3"
               >
               <img
                  src="https://images.pexels.com/photos/2004166/pexels-photo-2004166.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
@@ -116,8 +116,8 @@
   </div>
 </section>
 
-<section class="bg-whte pt-10 px-4 pb-10 lg:pt-[120px] lg:pb-20 drop-shadow-md">
-    <div class="container mx-auto drop-shadow-sm">
+<section class="flex justify-center bg-whte pt-10 px-4 pb-10 lg:pt-[120px] lg:pb-20 drop-shadow-md">
+    <div class="container mx-auto">
       <div>
         <h1 class="text-orange">LOREM IPSUM</h1>
       <p class=" text-2xl">
