--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,10 +1,7 @@
 
-<section>
-   
-</section>
 
 
-<section class="bg-black pt-10 px-4 pb-10 lg:pt-[120px] lg:pb-20">
+<section class="bg-black pt-10 px-4 pb-10 lg:pt-[120px] lg:pb-20" data-aos="fade-up" data-aos-offset="200" data-aos-delay="50">
   <div class="container mx-auto">
     <div>
       <h1 class="text-orange">LOREM IPSUM</h1>
@@ -16,8 +13,8 @@
         Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including 
         versions of Lorem Ipsum.</p>
     </div>
-     <div class="flex flex-wrap -mx-4">
-        <div class="w-full px-4 md:w-1/2 xl:w-1/3">
+     <div class="flex flex-wrap -mx-4" >
+        <div class="w-full px-4 md:w-1/2 xl:w-1/3" data-aos="fade-left" data-aos-offset="200" data-aos-delay="50">
            <div
               class="mb-10 overflow-hidden duration-300 bg-brown rounded-lg shadow-2xl shadow-gray-800"
               >
@@ -50,7 +47,7 @@
               </div>
            </div>
         </div>
-        <div class="w-full px-4 md:w-1/2 xl:w-1/3">
+        <div class="w-full px-4 md:w-1/2 xl:w-1/3" data-aos="fade-up" data-aos-offset="200" data-aos-delay="50">
            <div
               class="mb-10 overflow-hidden duration-300 bg-brown  rounded-lg dark:bg-dark-2 shadow-2xl shadow-gray-800 hover:shadow-3 dark:shadow-card dark:hover:shadow-3"
               >
@@ -81,7 +78,7 @@
               </div>
            </div>
         </div>
-        <div class="w-full px-4 md:w-1/2 xl:w-1/3">
+        <div class="w-full px-4 md:w-1/2 xl:w-1/3" data-aos="fade-left" data-aos-offset="200" data-aos-delay="50">
            <div
               class="mb-10 overflow-hidden duration-300 bg-brown rounded-lg dark:bg-dark-2 shadow-2xl shadow-gray-800 hover:shadow-3 dark:shadow-card dark:hover:shadow-3"
               >
@@ -116,7 +113,7 @@
   </div>
 </section>
 
-<section class="flex justify-center bg-whte pt-10 px-4 pb-10 lg:pt-[120px] lg:pb-20 drop-shadow-md">
+<section class="flex justify-center bg-whte pt-10 px-4 pb-10 lg:pt-[120px] lg:pb-20 drop-shadow-md" data-aos="fade-up" data-aos-offset="200" data-aos-delay="50">
     <div class="container mx-auto">
       <div>
         <h1 class="text-orange">LOREM IPSUM</h1>
@@ -135,7 +132,7 @@
       </div>
 </section>
 
-<section class="bg-orange pt-3 px-4 pb-3 lg:pt-[30px] lg:pb-4">
+<section class="bg-orange pt-3 px-4 pb-3 lg:pt-[30px] lg:pb-4" data-aos="fade-up" data-aos-offset="200" data-aos-delay="50">
   <div class="container mx-auto ">
     <div>
       <h1 class="text-white">LOREM IPSUM</h1>
@@ -145,7 +142,7 @@
     </div>
 </section>
 
-<section id="works" class="relative bg-brown py-10 sm:py-16 lg:py-24">
+<section id="works" class="relative bg-brown py-10 sm:py-16 lg:py-24" data-aos="fade-up" data-aos-offset="200" data-aos-delay="50">
    <div class="px-4 mx-auto max-w-7xl sm:px-6 lg:px-8">
        <div class="max-w-2xl mx-auto text-center">
            <h2 class="text-4xl text-white font-extrabold mx-auto md:text-6xl lg:text-5xl">Jak to działa?</h2>
@@ -196,7 +193,7 @@
 </section>
 
 
-<section>
+<section data-aos="fade-up" data-aos-offset="200" data-aos-delay="50">
 <div class="bg-black py-24 sm:py-32">
    <div class="mx-auto max-w-7xl px-6 lg:px-8">
      <div class="mx-auto max-w-2xl lg:max-w-none">
