resolve x overlay, add partners section, add router links

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,7 +1,6 @@
 
 
-
-<section class="bg-black pt-10 px-4 pb-10 lg:pt-[120px] lg:pb-20" data-aos="fade-up" data-aos-offset="200" data-aos-delay="50">
+<section class="bg-black w-full pt-4 px-4 pb-4 lg:pt-[120px] lg:pb-10" data-aos="fade-up" data-aos-offset="200" data-aos-delay="50">
   <div class="container mx-auto">
     <div>
       <h1 class="text-orange">LOREM IPSUM</h1>
@@ -80,7 +79,7 @@
         </div>
         <div class="w-full px-4 md:w-1/2 xl:w-1/3" data-aos="fade-left" data-aos-offset="200" data-aos-delay="50">
            <div
-              class="mb-10 overflow-hidden duration-300 bg-brown rounded-lg dark:bg-dark-2 shadow-2xl shadow-gray-800 hover:shadow-3 dark:shadow-card dark:hover:shadow-3"
+              class="mb-4 overflow-hidden duration-300 bg-brown rounded-lg dark:bg-dark-2 shadow-2xl shadow-gray-800 hover:shadow-3 dark:shadow-card dark:hover:shadow-3"
               >
               <img
                  src="https://images.pexels.com/photos/2004166/pexels-photo-2004166.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
@@ -127,22 +126,33 @@
         </svg>
     </span>
     wiemy jak doprowadzić projekt do końca, tak aby każdy klient był zadowolony.
+    Dlatego właśnie zachęcamy do sprawdzenia naszej niesamowitej oferty.
+    Każdy będzie zadowolomny
 </p>
       </div>
       </div>
 </section>
 
 <section class="bg-orange pt-3 px-4 pb-3 lg:pt-[30px] lg:pb-4" data-aos="fade-up" data-aos-offset="200" data-aos-delay="50">
-  <div class="container mx-auto ">
-    <div>
-      <h1 class="text-white">LOREM IPSUM</h1>
-      <p class=" pb-10 text-white">Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
-    </div>
-    </div>
-</section>
+   <div class="container mx-auto">
+     <div class="flex flex-col lg:flex-row items-center justify-between">
+       <div class="w-full lg:w-2/3 lg:pr-8">
+         <h1 class="text-white text-2xl lg:text-3xl font-bold mb-2">Masz Pytania?</h1>
+         <p class="text-white mb-6">Jeśli nie wiesz czy nasza oferta jest dla Ciebie, czy zwyczajnie masz jakiekolwiek pytania dotyczące współpracy z nami wystarczy, że zadzwonisz do nas i postaramy się odpowiedzieć na każde zadane pytanie.</p>
+         <a href="/contact" class="inline-block px-6 py-3 bg-white text-orange font-semibold rounded-md shadow-md hover:bg-grey hover:text-white transition duration-300">Skontaktuj się z nami</a>
+       </div>
+       <div class="w-full lg:w-1/3 mt-6 lg:mt-0 flex justify-center">
 
-<section id="works" class="relative bg-brown py-10 sm:py-16 lg:py-24" data-aos="fade-up" data-aos-offset="200" data-aos-delay="50">
+         <img src="https://images.pexels.com/photos/3756879/pexels-photo-3756879.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Your Image" class="w-20 lg:w-auto rounded-lg shadow-lg border border-gray-200">
+
+       </div>
+     </div>
+   </div>
+ </section>
+ 
+ 
+
+ <section id="works" class="relative bg-brown py-10 sm:py-16 lg:py-24" data-aos="fade-up" data-aos-offset="200" data-aos-delay="50">
    <div class="px-4 mx-auto max-w-7xl sm:px-6 lg:px-8">
        <div class="max-w-2xl mx-auto text-center">
            <h2 class="text-4xl text-white font-extrabold mx-auto md:text-6xl lg:text-5xl">Jak to działa?</h2>
@@ -187,10 +197,12 @@
            </div>
        </div>
    </div>
+   <a href="/pricing" class="block mx-auto w-[fit-content] py-3 px-6 bg-white text-orange font-semibold rounded-md shadow-md mt-8 hover:bg-orange hover:text-white transition duration-300">Wyceń swoje zlecenie</a>
    <div class="absolute inset-0 m-auto max-w-xs h-[357px] blur-[118px] sm:max-w-md md:max-w-lg"
        style="background:radial-gradient(1.89deg, rgba(34, 78, 95, 0.4) -1000%, rgba(191, 227, 205, 0.26) 1500.74%, rgba(34, 140, 165, 0.41) 56.49%, rgba(28, 47, 99, 0.11) 1150.91%)">
    </div>
 </section>
+
 
 
 <section data-aos="fade-up" data-aos-offset="200" data-aos-delay="50">
@@ -224,4 +236,50 @@
    </div>
  </div>
 </section>
+   <!-- Section: Design Block -->
+   <section class="mb-8 text-center" data-aos="fade-up" data-aos-offset="200" data-aos-delay="50">
+      <div class="container">
+     <div class="py-12 md:px-12">
+       <div class="container mx-auto xl:px-32">
+         <div class="grid items-center lg:grid-cols-2">
+           <div class="mb-12 md:mt-12 lg:mt-0 lg:mb-0">
+             <div
+               class="relative z-[1] block rounded-lg bg-[hsla(0,0%,100%,0.55)] px-6 py-12 shadow-[0_2px_15px_-3px_rgba(0,0,0,0.07),0_10px_20px_-2px_rgba(0,0,0,0.04)] backdrop-blur-[30px] dark:bg-[hsla(0,0%,5%,0.55)] dark:shadow-black/20 md:px-12 lg:-mr-14">
+               <h2 class="mb-16 text-3xl text-orange">
+                 Nasi partnerzy 
+               </h2>
+               <div class="grid gap-x-6 md:grid-cols-2">
+                 <div class="mb-12">
+                   <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/landing-page/logo2-1.png"
+                     class="neutralscale px-6" />
+                 </div>
+ 
+                 <div class="mb-12">
+                   <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/landing-page/logo5-1.png"
+                     class="neutralscale px-6" />
+                 </div>
+ 
+                 <div class="mb-12 md:mb-0">
+                   <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/landing-page/logo3-1.png"
+                     class="neutralscale px-6" />
+                 </div>
+ 
+                 <div class="">
+                   <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/landing-page/logo4-1.png"
+                     class="neutralscale px-6" />
+                 </div>
+               </div>
+             </div>
+           </div>
+           <div class="md:mb-12 lg:mb-0">
+             <div class="px-4 md:px-0"> 
+               <img src="https://images.pexels.com/photos/3184418/pexels-photo-3184418.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
+                 class="w-full rounded-lg shadow-lg dark:shadow-black/20" alt="image" />
+             </div>
+           </div>
+         </div>
+       </div>
+     </div>
+   </div>
+   </section>
 
