--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -19,10 +19,10 @@
       <div class="hidden w-full md:block md:w-auto" id="navbar-dropdown">
         <ul class="flex flex-col font-medium p-4 md:p-0 mt-4 border rounded-lg md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 bg-white md:bg-black">
           <li>
-            <a href="#" class="block py-2 px-3 text-orange md:hover:text-white md:p-0" aria-current="page">Nasza Firma</a>
+            <a href="#" class="block py-2 px-3 text-orange md:hover:text-white md:p-0" aria-current="page" [routerLink]="['/']">Nasza Firma</a>
           </li>
           <li>
-              <button id="dropdownNavbarLink" data-dropdown-toggle="dropdownNavbar" class="flex items-center justify-between w-full py-2 px-3 text-orange rounded md:hover:text-white md:hover:bg-transparent md:border-0 md:hover:text-orange-500 md:p-0 md:w-auto ">Oferta <svg class="w-2.5 h-2.5 ms-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
+              <button id="dropdownNavbarLink" data-dropdown-toggle="dropdownNavbar" class="flex items-center justify-between w-full py-2 px-3 text-orange rounded md:hover:text-white md:hover:bg-transparent md:border-0 md:hover:text-orange-500 md:p-0 md:w-auto" [routerLink]="['/offer']">Oferta <svg class="w-2.5 h-2.5 ms-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
       <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"/>
     </svg></button>
               <!-- Dropdown menu -->
@@ -42,13 +42,13 @@
 
           </li>
           <li>
-            <a href="#" class="block py-2 px-3 text-orange rounded md:hover:text-white md:border-0 md:p-0 ">Realizacje</a>
+            <a href="#" class="block py-2 px-3 text-orange rounded md:hover:text-white md:border-0 md:p-0" [routerLink]="['/our-work']">Realizacje</a>
           </li>
           <li>
-            <a href="#" class="block py-2 px-3 text-orange rounded md:hover:text-white md:border-0 md:p-0 ">Wycena</a>
+            <a href="#" class="block py-2 px-3 text-orange rounded md:hover:text-white md:border-0 md:p-0" [routerLink]="['/pricing']">Wycena</a>
           </li>
           <li>
-            <a href="#" class="block py-2 px-3 text-orange rounded md:hover:text-white md:border-0 md:p-0 ">Kontakt</a>
+            <a href="#" class="block py-2 px-3 text-orange rounded md:hover:text-white md:border-0 md:p-0"  [routerLink]="['/contact']">Kontakt</a>
           </li>
         </ul>
       </div>
