Update home.html styling

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,5 @@
 
-
+<!-- TEXT UNDER CAROUSEL -->
 <section class="bg-black w-full pt-4 px-4 pb-4 lg:pt-[120px] lg:pb-10" data-aos="fade-up" data-aos-offset="200" data-aos-delay="50">
   <div class="container mx-auto">
     <div>
@@ -12,155 +12,135 @@
         Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including 
         versions of Lorem Ipsum.</p>
     </div>
-     <div class="flex flex-wrap -mx-4" >
-        <div class="w-full px-4 md:w-1/2 xl:w-1/3" data-aos="fade-left" data-aos-offset="200" data-aos-delay="50">
-           <div
-              class="mb-10 overflow-hidden duration-300 bg-brown rounded-lg shadow-2xl shadow-gray-800"
-              >
+
+    <!--CARDS SECTION  -->
+     <div class="flex flex-wrap mx-1" >
+
+        <!-- FIRST CARD -->
+        <div class="w-full px-3 md:w-1/2 xl:w-1/3" data-aos="fade-left" data-aos-offset="200"data-aos-delay="50">
+           <div class="mb-10 overflow-hidden duration-300 bg-brown rounded-lg shadow-2xl shadow-gray-900">
               <img
-                 src="https://images.pexels.com/photos/2117937/pexels-photo-2117937.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
-                 alt="image"
-                 class="w-full roim"
-                 />
-              <div class="p-8 text-center sm:p-9 md:p-7 xl:p-9">
-                 <h3>
-                    <a
-                       href="javascript:void(0)"
-                       class="text-dark dark:text-white hover:text-primary mb-4 block text-xl font-semibold sm:text-[22px] md:text-xl lg:text-[22px] xl:text-xl 2xl:text-[22px]"
-                       >
-                    50+ Best creative website themes & templates
-                    </a>
-                 </h3>
-                 <p
-                    class="text-base leading-relaxed text-body-color dark:text-dark-6 mb-7"
-                    >
-                    Lorem ipsum dolor sit amet pretium consectetur adipiscing
-                    elit. Lorem consectetur adipiscing elit.
-                 </p>
-                 <a
-                    href="javascript:void(0)"
-                    class="inline-block py-2 text-base font-medium transition border rounded-full px-7 hover:text-orange"
-                    >
-                 View Details
-                 </a>
-              </div>
-           </div>
-        </div>
-        <div class="w-full px-4 md:w-1/2 xl:w-1/3" data-aos="fade-up" data-aos-offset="200" data-aos-delay="50">
-           <div
-              class="mb-10 overflow-hidden duration-300 bg-brown  rounded-lg dark:bg-dark-2 shadow-2xl shadow-gray-800 hover:shadow-3 dark:shadow-card dark:hover:shadow-3"
-              >
-              <img
-                 src="https://images.pexels.com/photos/304664/pexels-photo-304664.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                 src="https://images.pexels.com/photos/2768398/pexels-photo-2768398.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
                  alt="image"
                  class="w-full"
                  />
-              <div class="p-8 text-center sm:p-9 md:p-7 xl:p-9">
+              <div class="p-8 text-center">
                  <h3>
-                    <a
-                       href="javascript:void(0)"
-                       class="text-dark dark:text-white hover:text-primary mb-4 block text-xl font-semibold sm:text-[22px] md:text-xl lg:text-[22px] xl:text-xl 2xl:text-[22px]"
-                       >
-                    The ultimate UX and UI guide to card design
+                    <a class="text-dark mb-4 block text-xl font-semibold sm:text-[22px] md:text-xl lg:text-[22px] xl:text-xl 2xl:text-[22px]">
+                        FIRST CARD TITLE
                     </a>
                  </h3>
-                 <p class="text-base leading-relaxed text-body-color mb-7">
+                 <p class="mb-7">
                     Lorem ipsum dolor sit amet pretium consectetur adipiscing
                     elit. Lorem consectetur adipiscing elit.
                  </p>
-                 <a
-                    href="javascript:void(0)"
-                    class="inline-block py-2 text-base font-medium transition border rounded-full text-body-color hover:border-primary hover:bg-primary border-gray-3 px-7 hover:text-orange  dark:border-dark-3 dark:text-dark-6"
-                    >
-                 View Details
-                 </a>
+                 <button class="bg-black hover:text-orange  text-white font-bold py-2 px-4 rounded-full transition duration-200">View Details</button>
               </div>
            </div>
         </div>
-        <div class="w-full px-4 md:w-1/2 xl:w-1/3" data-aos="fade-left" data-aos-offset="200" data-aos-delay="50">
-           <div
-              class="mb-4 overflow-hidden duration-300 bg-brown rounded-lg dark:bg-dark-2 shadow-2xl shadow-gray-800 hover:shadow-3 dark:shadow-card dark:hover:shadow-3"
-              >
-              <img
-                 src="https://images.pexels.com/photos/2004166/pexels-photo-2004166.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
-                 alt="image"
-                 class="w-full"
-                 />
-              <div class="p-8 text-center sm:p-9 md:p-7 xl:p-9">
-                 <h3>
-                    <a
-                       href="javascript:void(0)"
-                       class="text-dark hover:text-primary mb-4 block text-xl font-semibold sm:text-[22px] md:text-xl lg:text-[22px] xl:text-xl 2xl:text-[22px]"
-                       >
-                    Creative Card Component designs graphic elements
-                    </a>
-                 </h3>
-                 <p class="text-base leading-relaxed text-body-color mb-7">
-                    Lorem ipsum dolor sit amet pretium consectetur adipiscing
-                    elit. Lorem consectetur adipiscing elit.
-                 </p>
-                 <a
-                    href="javascript:void(0)"
-                    class="inline-block py-2 text-base font-medium transition border rounded-full text-body-color hover:border-primary hover:bg-primary border-gray-3 px-7 hover:text-orange  dark:border-dark-3 dark:text-dark-6"
-                    >
-                 View Details
-                 </a>
-              </div>
-           </div>
-        </div>
-     </div>
+
+        <!-- SECOND CARD -->
+        <div class="w-full px-3 md:w-1/2 xl:w-1/3" data-aos="fade-left" data-aos-offset="200"data-aos-delay="50">
+          <div class="mb-10 overflow-hidden duration-300 bg-brown rounded-lg shadow-2xl shadow-gray-900">
+             <img
+                src="https://images.pexels.com/photos/2768398/pexels-photo-2768398.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                alt="image"
+                class="w-full"
+                />
+             <div class="p-8 text-center">
+                <h3>
+                   <a class="text-dark mb-4 block text-xl font-semibold sm:text-[22px] md:text-xl lg:text-[22px] xl:text-xl 2xl:text-[22px]">
+                    SECOND CARD TITLE
+                   </a>
+                </h3>
+                <p class="mb-7">
+                   Lorem ipsum dolor sit amet pretium consectetur adipiscing
+                   elit. Lorem consectetur adipiscing elit.
+                </p>
+                <button class="bg-black hover:text-orange  text-white font-bold py-2 px-4 rounded-full transition duration-200">View Details</button>
+             </div>
+          </div>
+       </div>
+
+        <!-- THIRD CARD -->
+        <div class="w-full px-3 md:w-1/2 xl:w-1/3" data-aos="fade-left" data-aos-offset="200"data-aos-delay="50">
+          <div class="mb-10 overflow-hidden duration-300 bg-brown rounded-lg shadow-2xl shadow-gray-900">
+             <img
+                src="https://images.pexels.com/photos/2768398/pexels-photo-2768398.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                alt="image"
+                class="w-full"
+                />
+             <div class="p-8 text-center">
+                <h3>
+                   <a class="text-dark mb-4 block text-xl font-semibold sm:text-[22px] md:text-xl lg:text-[22px] xl:text-xl 2xl:text-[22px]">
+                    THIRD CARD TITLE
+                   </a>
+                </h3>
+                <p class="mb-7">
+                   Lorem ipsum dolor sit amet pretium consectetur adipiscing
+                   elit. Lorem consectetur adipiscing elit.
+                </p>
+                <button class="bg-black hover:text-orange  text-white font-bold py-2 px-4 rounded-full transition duration-200">View Details</button>
+             </div>
+          </div>
+       </div> 
+
+    </div>
   </div>
 </section>
 
-<section class="flex justify-center bg-whte pt-10 px-4 pb-10 lg:pt-[120px] lg:pb-20 drop-shadow-md" data-aos="fade-up" data-aos-offset="200" data-aos-delay="50">
+<!-- PROMO TEXT SECTION -->
+<section class="flex justify-center bg-whte pt-10 px-4 pb-10 lg:pt-[70px] lg:pb-20 drop-shadow-md" data-aos="fade-up" data-aos-offset="200" data-aos-delay="50">
     <div class="container mx-auto">
       <div>
-        <h1 class="text-orange">LOREM IPSUM</h1>
-      <p class=" text-2xl">
-    W 
-    <span class="text-orange mx-1 font-extrabold text-4xl relative inline-block stroke-current">
-        Solid Base
-        <svg class="absolute -bottom-0.5 w-full max-h-1.5" viewBox="0 0 55 5" xmlns="http://www.w3.org/2000/svg"
-            preserveAspectRatio="none">
-            <path d="M0.652466 4.00002C15.8925 2.66668 48.0351 0.400018 54.6853 2.00002" stroke-width="2"></path>
-        </svg>
-    </span>
-    wiemy jak doprowadzić projekt do końca, tak aby każdy klient był zadowolony.
-    Dlatego właśnie zachęcamy do sprawdzenia naszej niesamowitej oferty.
-    Każdy będzie zadowolomny
-</p>
+        <h1 class="text-orange">TO CO NAS WYRÓŻNIA ...</h1>
+        <p class="text-lg lg:text-2xl"> W 
+          <span class="text-orange mx-1 font-extrabold text-4xl relative inline-block stroke-current">
+            Solid Base
+            <svg class="absolute -bottom-0.5 w-full max-h-1.5" viewBox="0 0 55 5" xmlns="http://www.w3.org/2000/svg"
+              preserveAspectRatio="none">
+              <path d="M0.652466 4.00002C15.8925 2.66668 48.0351 0.400018 54.6853 2.00002" stroke-width="2"></path>
+            </svg>
+          </span>
+          wiemy jak doprowadzić projekt do końca, tak aby każdy klient był zadowolony.
+          Dlatego właśnie zachęcamy do sprawdzenia naszej niesamowitej oferty.
+          Każdy będzie zadowolony!
+        </p>
       </div>
-      </div>
+    </div>
 </section>
 
-<section class="bg-orange pt-3 px-4 pb-3 lg:pt-[30px] lg:pb-4" data-aos="fade-up" data-aos-offset="200" data-aos-delay="50">
+<!-- CONTACT SECTION -->
+<section class="bg-orange pt-3 px-4 pb-5 lg:pt-[30px] lg:pb-6" data-aos="fade-up" data-aos-offset="200" data-aos-delay="50">
    <div class="container mx-auto">
-     <div class="flex flex-col lg:flex-row items-center justify-between">
-       <div class="w-full lg:w-2/3 lg:pr-8">
+     <!-- 2 COL FELX -->
+      <div class="flex flex-col lg:flex-row items-center justify-between">
+       <!-- FIRST COL -->
+        <div class="w-full lg:w-2/3 lg:pr-8">
          <h1 class="text-white text-2xl lg:text-3xl font-bold mb-2">Masz Pytania?</h1>
-         <p class="text-white mb-6">Jeśli nie wiesz czy nasza oferta jest dla Ciebie, czy zwyczajnie masz jakiekolwiek pytania dotyczące współpracy z nami wystarczy, że zadzwonisz do nas i postaramy się odpowiedzieć na każde zadane pytanie.</p>
-         <a href="/contact" class="inline-block px-6 py-3 bg-white text-orange font-semibold rounded-md shadow-md hover:bg-grey hover:text-white transition duration-300">Skontaktuj się z nami</a>
-       </div>
-       <div class="w-full lg:w-1/3 mt-6 lg:mt-0 flex justify-center">
-
-         <img src="https://images.pexels.com/photos/3756879/pexels-photo-3756879.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Your Image" class="w-20 lg:w-auto rounded-lg shadow-lg border border-gray-200">
-
-       </div>
+         <p class="text-white mb-6 lg:text-lg">Jeśli nie wiesz czy nasza oferta jest dla Ciebie, czy zwyczajnie masz jakiekolwiek pytania dotyczące współpracy z nami wystarczy, że zadzwonisz do nas i postaramy się odpowiedzieć na każde zadane pytanie.</p>
+        </div>
+      <!-- SECOND COL -->
+        <div>
+          <a href="/contact" class="inline-block px-6 py-6 bg-white text-xl text-orange font-semibold rounded-md hover:text-white hover:bg-black transition duration-200 shadow-lg">
+              Skontaktuj się z nami teraz
+          </a>
+        </div>
+      
      </div>
    </div>
- </section>
+</section>
  
- 
-
+ <!-- SECTION STEP BY STEP -->
  <section id="works" class="relative bg-brown py-10 sm:py-16 lg:py-24" data-aos="fade-up" data-aos-offset="200" data-aos-delay="50">
    <div class="px-4 mx-auto max-w-7xl sm:px-6 lg:px-8">
        <div class="max-w-2xl mx-auto text-center">
            <h2 class="text-4xl text-white font-extrabold mx-auto md:text-6xl lg:text-5xl">Jak to działa?</h2>
-           <p class="max-w-2xl mx-auto mt-4 text-base text-orange leading-relaxed md:text-2xl">
+           <p class="max-w-2xl mx-auto mt-1 text-base text-orange leading-relaxed md:text-2xl">
                Nasza etyka pracy
            </p>
        </div>
-       <div class="relative mt-12 lg:mt-20">
+       <div class="relative mt-5 lg:mt-20">
            <div class="absolute inset-x-0 hidden xl:px-44 top-2 md:block md:px-20 lg:px-28"><img alt="" loading="lazy" width="1000" height="500" decoding="async" data-nimg="1" class="w-full" style="color:transparent" src="https://cdn.rareblocks.xyz/collection/celebration/images/steps/2/curved-dotted-line.svg">
            </div>
            <div class="relative grid grid-cols-1 text-center gap-y-12 md:grid-cols-3 gap-x-12">
@@ -170,7 +150,7 @@
                        <span class="text-xl font-semibold text-black">1</span>
                    </div>
                    <h3 class="mt-6 text-xl  text-white font-semibold leading-tight md:mt-10">Kontaktujesz się z nami</h3>
-                   <p class="mt-4 text-base text-orange md:text-lg">
+                   <p class="mt-1 text-base text-orange md:text-lg">
                        Skorzystaj z formularza
                    </p>
                </div>
@@ -180,7 +160,7 @@
                        <span class="text-xl font-semibold text-black">2</span>
                    </div>
                    <h3 class="mt-6 text-xl text-white font-semibold leading-tight md:mt-10">Wysyłasz zapytanie</h3>
-                   <p class="mt-4 text-base text-orange md:text-lg">
+                   <p class="mt-1 text-base text-orange md:text-lg">
                        Przygotowujemy wycenę
                    </p>
                </div>
@@ -190,7 +170,7 @@
                        <span class="text-xl font-semibold text-black">3</span>
                    </div>
                    <h3 class="mt-6 text-xl text-white font-semibold leading-tight md:mt-10">Przystępujemy do działania</h3>
-                   <p class="mt-4 text-base text-orange md:text-lg">
+                   <p class="mt-1 text-base text-orange md:text-lg">
                        Realizujemy Twój projekt
                    </p>
                </div>
@@ -204,7 +184,7 @@
 </section>
 
 
-
+ <!-- SECTION STATISTICS -->
 <section data-aos="fade-up" data-aos-offset="200" data-aos-delay="50">
 <div class="bg-black py-24 sm:py-32">
    <div class="mx-auto max-w-7xl px-6 lg:px-8">
@@ -236,7 +216,8 @@
    </div>
  </div>
 </section>
-   <!-- Section: Design Block -->
+
+ <!-- SECTION PARTNERS -->
    <section class="mb-8 text-center" data-aos="fade-up" data-aos-offset="200" data-aos-delay="50">
       <div class="container">
      <div class="py-12 md:px-12">
