add contact page

--- a/src/app/pages/pricing/pricing.component.html
+++ b/src/app/pages/pricing/pricing.component.html
@@ -17,17 +17,14 @@
       </span>
     </h2>
     <p class="text-gray-600">
-      Skorzystaj z formularza, a my zapewnimy Ci bezpłatną wycenę naszej płyty
-      fundamentowej. Nasze wyceny są realizowane bardzo szybko.
+      Skorzystaj z formularza, a my zapewnimy Ci bezpłatną i szybką wycenę naszej płyty
+      fundamentowej.
     </p>
     <p class="text-gray-600 mt-2">
-      Prosimy o wypełnienie formularza poniżej – to pozwoli nam przygotować dla
-      Państwa dokładną i wiarygodną ofertę bez żadnych opłat. Proszę sprawdzić,
-      czy podany numer telefonu i adres e-mail są prawidłowe, aby umożliwić
-      sprawny kontakt. Należy wypełnić wszystkie pola formularza.
-    </p>
-    <p class="text-gray-600 mt-2">
-      Zapewniamy bezpłatne porady i wsparcie konsultacyjne w trakcie budowy.
+      Prosimy o wypełnienie formularza poniżej, pozwoli to nam przygotować dokładną i wiarygodną ofertę. Proszę sprawdzić,
+      czy podane dane kontaktowe są prawidłowe, aby umożliwić
+      sprawną wycenę i komunikację z Państwem. Należy wypełnić wszystkie pola formularza.
+      Jedynym polem opcjonalnym formularza jest komentarz do projektu.
     </p>
   </div>
 
@@ -206,7 +203,7 @@
         name="comments"
         rows="4"
         class="mt-1 block w-full rounded-md border-grey shadow-sm focus:border-orange focus:ring-orange sm:text-sm"
-        placeholder="Wpisz swoje uwagi lub komentarze tutaj..."></textarea>
+        placeholder="(Opcjonalnie) Wpisz tutaj swoje uwagi lub komentarze..."></textarea>
     </div>
     <div class="mt-4">
       <label class="inline-flex items-center">
@@ -219,10 +216,10 @@
           required/>
         <span class="ml-2 text-sm text-gray-600">Oświadczam niniejszym, że jestem potencjalnym klientem z zamiarem
           budowy, aktualnie budującym lub sondującym rynek w celu zdobycia
-          danych o kosztach (możliwościach) związanych z budową domu.
+          danych o kosztach związanych z budową domu.
           Jednocześnie wyrażam zgodę na przetwarzanie moich danych osobowych w
           celach marketingowych, także na otrzymywanie informacji handlowych od
-          właściciela strony solidbase zgodnie z ustawą z dnia 29 sierpnia 1997
+          właściciela strony Solid Base zgodnie z ustawą z dnia 29 sierpnia 1997
           r. o ochronie danych osobowych (Dz. U.Nr 133. poz. 883).</span>
       </label>
     </div>
