--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -1,1 +1,66 @@
-<p>contact works!</p>
+<section class="bg-white py-12">
+    <div class="container mx-auto px-4">
+
+        <h2 class="text-2xl font-semibold text-black  mb-8 mt-8 text-center">Wyceń Projekt       <span
+            class="text-orange mx-1 font-extrabold text-4xl relative inline-block stroke-current">
+            Solid Base
+            <svg
+              class="absolute -bottom-0.5 w-full max-h-1.5"
+              viewBox="0 0 55 5"
+              xmlns="http://www.w3.org/2000/svg"
+              preserveAspectRatio="none">
+              <path
+                d="M0.652466 4.00002C15.8925 2.66668 48.0351 0.400018 54.6853 2.00002"
+                stroke-width="2"></path>
+            </svg>
+          </span></h2>
+        <div class="text-center mt-4">
+          <button
+            routerLink="/pricing"
+            class="bg-black text-white font-bold py-2 px-4 rounded-none hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-black focus:ring-opacity-50 transition ease-in-out duration-150">
+            Wyceń swój projekt
+          </button>
+        </div>  
+      <h2 class="text-2xl font-semibold text-black mb-8 mt-8 text-center">Skontaktuj się z nami:</h2>
+  
+      <div class="grid gap-6 md:grid-cols-3">
+        <div class="p-6 border border-gray-200 shadow-lg rounded-lg text-center">
+          <h3 class="text-lg font-semibold text-orange mb-2">Nasz adres</h3>
+          <p class="text-gray-600">
+            123 Main Street, Suite 000<br>
+            Cityville, State 12345<br>
+            Country
+          </p>
+        </div>
+  
+        <div class="p-6 border border-gray-200 shadow-lg rounded-lg text-center">
+          <h3 class="text-lg font-semibold text-orange mb-2">Telefon</h3>
+          <p class="text-gray-600">0000-000-000</p>
+        </div>
+  
+        <div class="p-6 border border-gray-200 shadow-lg rounded-lg text-center">
+          <h3 class="text-lg font-semibold text-orange mb-2">Email</h3>
+          <p class="text-gray-600">info@example.com</p>
+        </div>
+      </div>
+      
+   
+
+  
+    
+      <div class="relative h-0 overflow-hidden mt-8 mb-6" style="padding-bottom: 56.25%;">
+        <iframe
+          class="absolute top-0 left-0 w-full h-full"
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3353.096656292789!2d-122.08217698485344!3d37.42205787981786!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808fbc7b4be10725%3A0xf59d178a87b32f52!2sGolden%20Gate%20Bridge!5e0!3m2!1sen!2sus!4v1610035984427!5m2!1sen!2sus"
+          frameborder="0"
+          style="border:0;"
+          allowfullscreen=""
+          aria-hidden="false"
+          tabindex="0"
+        ></iframe>
+      </div>
+ 
+
+    </div>
+  </section>
+  
