--- a/src/app/pages/our-work/our-work.component.html
+++ b/src/app/pages/our-work/our-work.component.html
@@ -1,1 +1,38 @@
-<p>our-work works!</p>
+<section class="bg-white py-8">
+    <div class="container px-5 py-6 mx-auto">
+      <div class="flex flex-col text-center w-full mb-20">
+        <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-gray-900">Nasze Dotychczasowe Realizacje</h1>
+        <p class="lg:w-2/3 mx-auto leading-relaxed text-base">
+          Nasze doświadczenie w realizacji płyt betonowych sięga wielu lat, podczas których z sukcesem zrealizowaliśmy projekty dla szerokiego spektrum klientów. Każde zlecenie traktujemy indywidualnie, stosując rozwiązania dopasowane do specyficznych potrzeb i oczekiwań, co pozwala nam na osiąganie najwyższej jakości i trwałości wykonania. Nasze dotychczasowe realizacje, w tym zarówno małe, jak i duże płyty fundamentowe, zdobyły uznanie i zaufanie klientów, co stanowi dla nas najlepszą rekomendację.
+        </p>
+      </div>
+    </div>
+  
+    <div class="container mx-auto px-4">
+      <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4">
+        <!-- Card 1 -->
+        <div class="overflow-hidden shadow-lg rounded-lg relative group">
+          <img src="https://images.pexels.com/photos/2219024/pexels-photo-2219024.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Placeholder" class="w-full h-full object-cover object-center"/>
+          <div class="absolute inset-0 bg-black bg-opacity-10 group-hover:bg-opacity-60 flex items-center justify-center opacity-50 sm:opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+            <h2 class="text-orange font-bold text-xl hover:text-orange transition-all duration-300">Szczegółowe Prace</h2>
+          </div>
+        </div>
+        <!-- Card 2 -->
+        <div class="overflow-hidden shadow-lg rounded-lg relative group">
+          <img src="https://images.pexels.com/photos/7931/pexels-photo-7931.jpg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Placeholder" class="w-full h-full object-cover object-center"/>
+          <div class="absolute inset-0 bg-black bg-opacity-10 group-hover:bg-opacity-60 flex items-center justify-center opacity-50 sm:opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+            <h2 class="text-orange font-bold text-xl hover:text-orange transition-all duration-300">Prywatne Przedsięwzięcia</h2>
+          </div>
+        </div>
+        <!-- Card 3 -->
+        <div class="overflow-hidden shadow-lg rounded-lg relative group">
+          <img src="https://images.pexels.com/photos/2937884/pexels-photo-2937884.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Placeholder" class="w-full h-full object-cover object-center"/>
+          <div class="absolute inset-0 bg-black bg-opacity-10 group-hover:bg-opacity-60 flex items-center justify-center opacity-50 sm:opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+            <h2 class="text-orange font-bold text-xl hover:text-orange transition-all duration-300">Duże Inwestycje</h2>
+          </div>
+        </div>
+        <!-- Additional cards -->
+      </div>
+    </div>
+  </section>
+  
