correct text styling

--- a/src/app/pages/our-work/our-work.component.html
+++ b/src/app/pages/our-work/our-work.component.html
@@ -1,8 +1,8 @@
 <section class="bg-white py-8">
     <div class="container px-5 py-6 mx-auto">
       <div class="flex flex-col text-center w-full mb-20">
-        <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-gray-900">Nasze Dotychczasowe Realizacje</h1>
-        <p class="lg:w-2/3 mx-auto leading-relaxed text-base">
+        <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-black">Nasze Dotychczasowe Realizacje</h1>
+        <p class="lg:w-2/3 mx-auto leading-relaxed text-base text-gray-600">
           Nasze doświadczenie w realizacji płyt betonowych sięga wielu lat, podczas których z sukcesem zrealizowaliśmy projekty dla szerokiego spektrum klientów. Każde zlecenie traktujemy indywidualnie, stosując rozwiązania dopasowane do specyficznych potrzeb i oczekiwań, co pozwala nam na osiąganie najwyższej jakości i trwałości wykonania. Nasze dotychczasowe realizacje, w tym zarówno małe, jak i duże płyty fundamentowe, zdobyły uznanie i zaufanie klientów, co stanowi dla nas najlepszą rekomendację.
         </p>
       </div>
