--- a/src/app/pages/pricing/pricing.component.html
+++ b/src/app/pages/pricing/pricing.component.html
@@ -1,6 +1,6 @@
 <div class="max-w-4xl mx-auto p-5 mt-8">
   <div class="mb-8 text-center">
-    <h2 class="text-xl text-gray-800 mb-4">
+    <h2 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-black">
       Wycena Płyty Fundamentowej
       <span
         class="text-orange mx-1 font-extrabold text-4xl relative inline-block stroke-current">
