Update navbar , style home and navbar

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,9 +1,9 @@
 
 <!-- TEXT UNDER CAROUSEL -->
-<section class="bg-black w-full pt-4 px-4 pb-4 lg:pt-[120px] lg:pb-10" data-aos="fade-up" data-aos-offset="200" data-aos-delay="50">
+<section class="bg-black w-full pt-4 px-4 pb-4 lg:pt-[75px]" data-aos="fade-up" data-aos-offset="200" data-aos-delay="50">
   <div class="container mx-auto">
-    <div>
-      <h1 class="text-orange">LOREM IPSUM</h1>
+    <div class="pb-10">
+      <h1 class="text-orange text-xl">O NASZEJ FIRMIE:</h1>
       <p class="text-white pb-10">Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
         Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
         when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
