--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,57 +1,81 @@
 <nav class="bg-black">
-    <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
+  <div class="max-w-screen-2xl flex flex-wrap items-center justify-between mx-auto p-4">
       <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
-          <!-- <img src="assets/logoSB.png" style="height: 85px" alt="Logo" /> -->
-          <span class="text-orange self-center text-3xl font-semibold whitespace-nowrap">  <span class="text-orange mx-1 font-extrabold text-4xl relative inline-block stroke-current">
-            Solid Base
-            <svg class="absolute -bottom-0.5 w-full max-h-1.5" viewBox="0 0 55 5" xmlns="http://www.w3.org/2000/svg"
-                preserveAspectRatio="none">
-                <path d="M0.652466 4.00002C15.8925 2.66668 48.0351 0.400018 54.6853 2.00002" stroke-width="2"></path>
-            </svg>
-        </span></span>
+          <span class="text-orange self-center text-3xl font-semibold whitespace-nowrap">
+              <span class="text-orange mx-1 font-extrabold lg:text-5xl md:text-4xl relative inline-block stroke-current">
+                  Solid Base
+                  <svg class="absolute -bottom-0.5 w-full max-h-1.5" viewBox="0 0 55 5" xmlns="http://www.w3.org/2000/svg"
+                      preserveAspectRatio="none">
+                      <path d="M0.652466 4.00002C15.8925 2.66668 48.0351 0.400018 54.6853 2.00002" stroke-width="2"></path>
+                  </svg>
+              </span>
+          </span>
       </a>
-      <button data-collapse-toggle="navbar-dropdown" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 " aria-controls="navbar-dropdown" aria-expanded="false">
-          <span class="sr-only">Open main menu</span>
-          <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
-              <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
-          </svg>
-      </button>
-      <div class="hidden w-full md:block md:w-auto" id="navbar-dropdown">
-        <ul class="flex flex-col font-medium p-4 md:p-0 mt-4 border rounded-lg md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 bg-white md:bg-black">
-          <li>
-            <a href="#" class="block py-2 px-3 text-orange md:hover:text-white md:p-0" aria-current="page" [routerLink]="['/']">Nasza Firma</a>
-          </li>
-          <li>
-              <button id="dropdownNavbarLink" data-dropdown-toggle="dropdownNavbar" class="flex items-center justify-between w-full py-2 px-3 text-orange rounded md:hover:text-white md:hover:bg-transparent md:border-0 md:hover:text-orange-500 md:p-0 md:w-auto" [routerLink]="['/offer']">Oferta <svg class="w-2.5 h-2.5 ms-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
-      <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"/>
-    </svg></button>
-              <!-- Dropdown menu -->
-<div id="dropdownNavbar" class="z-40 hidden font-normal bg-white divide-y divide-black rounded-lg shadow-md shadow-black sm:ml-auto">
-    <ul class="py-2 text-sm text-orange" aria-labelledby="dropdownLargeButton">
-        <li>
-            <a href="#" class="flex md:block px-4 py-2">Tanio</a>
-        </li>
-        <li>
-            <a href="#" class="flex md:block px-4 py-2">Taniej</a>
-        </li>
-        <li>
-            <a href="#" class="flex md:block px-4 py-2">Najtaniej</a>
-        </li>
-    </ul>
-</div>
 
-          </li>
-          <li>
-            <a href="#" class="block py-2 px-3 text-orange rounded md:hover:text-white md:border-0 md:p-0" [routerLink]="['/our-work']">Realizacje</a>
-          </li>
-          <li>
-            <a href="#" class="block py-2 px-3 text-orange rounded md:hover:text-white md:border-0 md:p-0" [routerLink]="['/pricing']">Wycena</a>
-          </li>
-          <li>
-            <a href="#" class="block py-2 px-3 text-orange rounded md:hover:text-white md:border-0 md:p-0"  [routerLink]="['/contact']">Kontakt</a>
-          </li>
-        </ul>
+      <!-- NAVBAR COLLAPSE -->
+      <button type="button" class="navbar-toggle inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-orange rounded-lg md:hidden hover:text-black"
+        (click)="toggleNavbar()" [attr.aria-expanded]="isNavbarOpen.toString()">
+        <svg *ngIf="!isNavbarOpen; else crossIcon" class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
+            <path stroke="currentColor" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15" />
+        </svg>
+        <ng-template #crossIcon>
+            <svg class="w-6 h-6 text-orange" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+                <path stroke="currentColor" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+            </svg>
+        </ng-template>
+      </button>
+      <div [class.hidden]="!isNavbarOpen" class="w-full md:block md:w-auto" id="navbar-dropdown">
+          <ul class="flex flex-col font-medium p-4 md:p-0 mt-4 border rounded-lg md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 bg-white md:bg-black">
+              <li>
+                  <a href="#" class="block py-2 px-3 text-orange md:hover:text-white md:p-0" aria-current="page" [routerLink]="['/']"
+                      (click)="toggleNavbar()">Nasza Firma</a>
+              </li>
+              <li>
+                  <a href="#" class="block py-2 px-3 text-orange rounded md:hover:text-white md:border-0 md:p-0" [routerLink]="['/offer']"
+                      (click)="toggleNavbar()">Oferta</a>
+              </li>
+              <li>
+                  <a href="#" class="block py-2 px-3 text-orange rounded md:hover:text-white md:border-0 md:p-0" [routerLink]="['/our-work']"
+                      (click)="toggleNavbar()">Realizacje</a>
+              </li>
+              <li>
+                  <a href="#" class="block py-2 px-3 text-orange rounded md:hover:text-white md:border-0 md:p-0" [routerLink]="['/pricing']"
+                      (click)="toggleNavbar()">Wycena</a>
+              </li>
+              <li>
+                  <a href="#" class="block py-2 px-3 text-orange rounded md:hover:text-white md:border-0 md:p-0" [routerLink]="['/contact']"
+                      (click)="toggleNavbar()">Kontakt</a>
+              </li>
+          </ul>
       </div>
-    </div>
-  </nav>
-  
+  </div>
+</nav>
+
+
+<!-- <li>
+  <button id="dropdownNavbarLink" data-dropdown-toggle="dropdownNavbar" 
+    class="flex items-center  w-full py-2 px-3 text-orange rounded md:hover:text-white md:hover:bg-transparent md:border-0 md:hover:text-orange-500 md:p-0 md:w-auto" 
+    [routerLink]="['/offer']">
+    Oferta
+    <svg class="w-2.5 h-2.5 ms-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
+      <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"/>
+    </svg>
+  </button>
+
+  <div id="dropdownNavbar" class="z-40 hidden font-normal bg-white divide-y divide-black rounded-lg shadow-md shadow-black sm:ml-auto">
+      <ul class="py-2 text-sm text-orange" aria-labelledby="dropdownLargeButton">
+          <li>
+              <a href="#" class="flex md:block px-4 py-2" (click)="toggleNavbar()">Tanio</a>
+          </li>
+          <li>
+              <a href="#" class="flex md:block px-4 py-2" (click)="toggleNavbar()">Taniej</a>
+          </li>
+          <li>
+              <a href="#" class="flex md:block px-4 py-2" (click)="toggleNavbar()">Najtaniej</a>
+          </li>
+      </ul>
+  </div>
+  </li> -->
+
+
+
